# win_python_env_vars

./: README.md  pyproject.toml
src/win_env_manager/: env_handlers.py  env_vars.py
