[project]
name = "win-env-manager"
version = "0.1.0"
description = "Windows Environment Variables Manager"
authors = [{name = "Gaëtan Montury",email = "32298455+pytgaen@users.noreply.github.com"}]
requires-python = ">=3.9"

[project.scripts]
win-env-manager = "win_env_manager.env_vars:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/win_env_manager"]